# king-cardgame

./: .gitignore  .gitmodules  AgentLoadTest.py  README  README.md  client.py  human.py  king.py  kingAgent.py  kingBot.py  kingClient.py  kingHallAgent.py  kingHuman.py  kingdb.py  loadtest.py  random_bot.py  server.py
.deprecated/: AgentLoadTest.py  kingAgent.py  kingBot.py  kingClient.py  kingHallAgent.py  kingHuman.py
Clients/cpp/ConsoleClient/: ConsoleClient.sln  ConsoleClient.vcxproj  ConsoleClient.vcxproj.filters  SimpleRpcClient.cpp  SimpleRpcClient.h  Source.cpp
Clients/haskell/king-game-client/: ChangeLog.md  LICENSE  README.md  king-game-client.cabal  king-game.cabal  package.yaml  stack.yaml
Clients/haskell/king-game-client/app/: Main.hs
Clients/ms.net/HumanConsoleClient/: HumanConsoleClient.csproj  HumanConsoleClient.sln  Program.cs  kingClient.cs
Clients/ms.net/WinStoreKing/: Card.cs  IPlayer.cs  KingGame.cs  Menu.cs  Opponent.cs  Package.appxmanifest  Player.cs  Program.cs  Table.cs  TextManager.cs  Win7King.csproj  Win7Program.cs  WinStoreKing.csproj  WinStoreKing.sln  WinStoreKing_TemporaryKey.pfx
Clients/nodejs/: app.js  blackjack.html  blackjack.js  blackjack_table.css  cards.css  cards.js  index.html  king.css  king.js  package-lock.json  package.json
Clients/nodejs/public/: cards.css  cards.js  king.css  king.js
Clients/rust/king_rust/: Cargo.toml
Clients/rust/king_rust/src/: main.rs
client-only/cpp/ConsoleClient/: ConsoleClient.sln  ConsoleClient.vcxproj  ConsoleClient.vcxproj.filters  SimpleRpcClient.cpp  SimpleRpcClient.h  Source.cpp
client-only/ms.net/HumanConsoleClient/: HumanConsoleClient.csproj  HumanConsoleClient.sln  Program.cs  kingClient.cs
client-only/nodejs/: app.js  index.html  package-lock.json  package.json
client-only/nodejs/public/: cards.css  cards.js  jquery.keyframes.js  king.css  king.js
client-only/rust/king_rust/: Cargo.toml
deprecated/: AgentLoadTest.py  kingClient.py  kingHuman.py
haskell/king-game/: LICENSE  README.md  king-game.cabal
haskell/king-game/app/: ClientMain.hs  ServerMain.hs
haskell/king-game/dist-newstyle/cache/: improved-plan  source-hashes  up-to-date
haskell/king-game/dist-newstyle/packagedb/ghc-9.6.7/: package.cache
haskell/king-game/src/: GameRules.hs  KingTypes.hs  ProductionEnv.hs  ServerLogic.hs
haskell/king-game/test/: Spec.hs
python/: MONGODB.py  human.py  king.py  loadtest.py  server.py
(+55 files in other folders)
