cabal-version: 1.12
name:           king-game
version:        0.1.0.0
description:    Client and Server for my King Card Game, info on <http://elloxas.blogspot.com>
homepage:       https://bitbucket.org/raffaine/cardgamehall/
bug-reports:    https://bitbucket.org/raffaine/cardgamehall/issues
author:         Julio Raffaine
maintainer:     julio.loxas@gmail.com
copyright:      2021 Julio Raffaine
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://bitbucket.org/raffaine/cardgamehall/src/zeromq/Clients/haskell/king-game-client

library
  exposed-modules:
      KingTypes
      GameRules
      KingClient
      ServerLogic
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , bytestring
    , split
    , json
    , mtl
    , zeromq4-haskell
    , stm
    , containers
  default-language: Haskell2010

-- King Client
executable king-game-client-exe
  main-is: ClientMain.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , king-game
    , zeromq4-haskell
    , stm
    , async
    , mtl
    , bytestring
  default-language: Haskell2010

-- King Server
executable king-game-server-exe
  main-is: ServerMain.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , king-game
    , zeromq4-haskell
    , stm
    , containers
    , bytestring
  default-language: Haskell2010

-- Test Suite
test-suite king-game-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , king-game
    , containers
    , hspec
  default-language: Haskell2010
