[package]
name = "king_rust"
version = "0.1.0"
authors = ["Julio Raffaine <julio.loxas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zmq = "0.9"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.0"
